--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,1 +1,7 @@
 @import './common';
+@import './utils/variables';
+@import './utils/mixins';
+@import './base/reset';
+@import './base/container';
+
+@import './components/header';
