--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,5 +3,5 @@
 @import './utils/mixins';
 @import './base/reset';
 @import './base/container';
-
+@import './layout/theme_switcher';
 @import './components/header';
