--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -9,5 +9,7 @@ $oddColorLightTheme: #dfe3ee;
 $textColorLightTheme: 	#1e2124;
 
 $decorativeColor: 	#7289da;
+$decorativeColorLight: 	#dfe3ee;
+$decorativeColorDark: 	#3b5998;
 $decorativeGreyColor: 	#99aab5;
 $decarativeShadowColor: 	#282b30;
