--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -4,8 +4,20 @@
     }
 }
 
+@mixin max_767 {
+    @media screen and (max-width: 767px) {
+        @content;
+    }
+}
+
 @mixin min_768 {
     @media screen and (min-width: 768px) {
+        @content;
+    }
+}
+
+@mixin max_1023 {
+    @media screen and (max-width: 1023px) {
         @content;
     }
 }
@@ -20,4 +32,8 @@
     @media screen and (min-width: 1440px) {
         @content;
     }
+}
+
+%transition {
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
