--- a/src/partials/anime.html
+++ b/src/partials/anime.html
@@ -1,12 +1,6 @@
-<main>
+<main class="anime">
     <div class="container">
         <ul class="anime-list">
-            <li class="card">
-                <div class="card__thumb">
-                    <img src="https://gogocdn.net/cover/spy-x-family.png" alt="" class="card__img">
-                    <p class="card__episode">NEW <span></span> EPISODE</p>
-                </div>
-            </li>
         </ul>
         <div id="tui-pagination-container" class="tui-pagination"></div>
     </div>
