--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -16,6 +16,12 @@
     }
 }
 
+@mixin min_768_max_1023 {
+    @media screen and (min-width:768px) and (max-width: 1023px) {
+        @content;
+    }
+}
+
 @mixin max_1023 {
     @media screen and (max-width: 1023px) {
         @content;
