--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,6 +7,7 @@ $textColorDarkTheme: 	#ffffff;
 $mainBcgLightTheme: #f7f7f7;
 $oddColorLightTheme: #dfe3ee;
 $textColorLightTheme: 	#1e2124;
+$lightDecorative: #a8b8ef;
 
 $decorativeColor: 	#7289da;
 $decorativeColorLight: 	#dfe3ee;
