--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header dark-theme">
-    <div class="container">
+    <div class="container header--flex">
         <div class="header__holder">
             <a class="header__logo" href="./">
                 <svg width="100" height="100" class="logo">
@@ -18,30 +18,32 @@
                 </button>
             </form>
         </div>
-        <nav class="header__nav">
-            <a class="header__link dark-theme">
-                Recent release
-            </a>
-            <a href="" class="header__link dark-theme">
-                Popular
-            </a>
-        </nav>
-        <div class="header__interaction">
-            <button class="sign-up__btn">
-                Sign up
-            </button>
-            <div class="theme-switcher">
-                <svg width="30" height="30" class="icon-theme">
-                    <use href="./images/icons.svg#icon-light-theme"></use>
-                </svg>
-                <div class="theme-switcher__container">
-                    <div class="theme-switcher__track dark-theme">
-                        <div class="theme-switcher__circle dark-theme"></div>
+        <div class="header__holder">
+            <nav class="header__nav">
+                <a class="header__link current">
+                    Recent uploads
+                </a>
+                <a href="" class="header__link">
+                    Popular
+                </a>
+            </nav>
+            <div class="header__interaction">
+                <button class="library__btn" type="button">
+                    My Library
+                </button>
+                <div class="theme-switcher">
+                    <svg width="30" height="30" class="icon-theme">
+                        <use href="./images/icons.svg#icon-light-theme"></use>
+                    </svg>
+                    <div class="theme-switcher__container">
+                        <div class="theme-switcher__track dark-theme">
+                            <div class="theme-switcher__circle dark-theme"></div>
+                        </div>
                     </div>
+                    <svg width="28" height="28" class="icon-theme chosen">
+                        <use href="./images/icons.svg#icon-dark-theme"></use>
+                    </svg>
                 </div>
-                <svg width="28" height="28" class="icon-theme chosen">
-                    <use href="./images/icons.svg#icon-dark-theme"></use>
-                </svg>
             </div>
         </div>
     </div>
