--- a/src/sass/components/_anime-list.scss
+++ b/src/sass/components/_anime-list.scss
@@ -1,6 +1,14 @@
 .anime {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  @include min_768 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  @include min_1440 {
+    padding-top: 70px;
+    padding-bottom: 50px;
+  }
 }
 .anime-list {
   display: flex;
@@ -12,6 +20,7 @@
 .card {
   width: calc((100% - 4 * 5px) / 2);
   margin: 5px;
+  cursor: pointer;
   @include min_768 {
     width: calc((100% - 6 * 5px) / 3);
   }
@@ -19,25 +28,35 @@
     width: calc((100% - 8 * 5px) / 4);
   }
   @include min_1440 {
-    width: calc((100% - 10 * 5px) / 5);
-
+    width: calc((100% - 10 * 10px) / 5);
+    margin: 10px;
+  }
+  &:hover,
+  &:active,
+  &:focus {
+    .card__img {
+      transform: scale(1.1);
+    }
   }
   &__thumb {
     width: 100%;
     height: 200px;
     position: relative;
+    overflow: hidden;
+    box-shadow: 7px 5px 82px -33px rgba(114, 137, 218, 1);
     @include min_768 {
-        height: 350px;
-      }
-      @include min_1440 {
-        height: 400px;
-      }
+      height: 350px;
+    }
+    @include min_1440 {
+      height: 400px;
+    }
   }
   &__img {
     display: block;
     object-fit: cover;
     width: 100%;
     height: 100%;
+    @extend %transition;
   }
   &__episode {
     position: absolute;
@@ -48,13 +67,58 @@
     padding-top: 5px;
     padding-bottom: 5px;
     text-align: center;
+    text-transform: uppercase;
+    color: $textColorDarkTheme;
+    @include min_768 {
+      padding-top: 8px;
+      padding-bottom: 8px;
+      font-size: 16px;
+    }
+    @include min_1440 {
+      font-size: 20px;
+    }
     &-num {
-      color: #a8b8ef;
+      color: $lightDecorative;
     }
   }
   &__title {
     text-align: center;
     margin-top: 15px;
     font-size: 15px;
+    @include min_768 {
+      font-size: 20px;
+    }
+    @include min_1440 {
+      font-size: 22px;
+    }
+  }
+}
+
+.add-like {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 20px;
+  background-color: $mainBcgLightTheme;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5px;
+  border-top-left-radius: 10px;
+  & > .icon-like {
+    color: #ed685f;
+    @extend %transition;
+    &:hover,
+    &:focus,
+    &:active {
+      color: #c2534c;
+    }
+  }
+  @include min_768 {
+    width: 40px;
+    height: 40px;
+    .icon-like {
+      font-size: 22px;
+    }
   }
 }
