--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,7 +28,7 @@
                 </a>
             </nav>
             <div class="header__interaction">
-                <button class="library__btn" type="button">
+                <button class="btn--blue library__btn" type="button">
                     My Library
                 </button>
                 <div class="theme-switcher">
