--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -14,3 +14,5 @@ $decorativeColorLight: 	#dfe3ee;
 $decorativeColorDark: 	#3b5998;
 $decorativeGreyColor: 	#99aab5;
 $decarativeShadowColor: 	#282b30;
+$likeColorLight: #ed685f;
+$likeColorDark: #c2534c;
