--- a/src/sass/components/_anime-list.scss
+++ b/src/sass/components/_anime-list.scss
@@ -106,12 +106,12 @@
   padding-top: 5px;
   border-top-left-radius: 10px;
   & > .icon-like {
-    color: #ed685f;
+    color: $likeColorLight;
     @extend %transition;
     &:hover,
     &:focus,
     &:active {
-      color: #c2534c;
+      color: $likeColorDark;
     }
   }
   @include min_768 {
