add simple theme switching

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header dark-theme">
+<header class="header">
     <div class="container header--flex">
         <div class="header__holder">
             <a class="header__logo" href="./">
@@ -9,7 +9,7 @@
                     AnimeGoGo
                 </h1>
             </a>
-            <form class="header__search dark-theme">
+            <form class="header__search">
                 <input type="text" id="search-box" placeholder="Naruto" class="header__search__input">
                 <button type="submit" class="header__search__btn dark-theme">
                     <svg width="30" height="30">
@@ -32,7 +32,7 @@
                     My Library
                 </button>
                 <div class="theme-switcher">
-                    <svg width="30" height="30" class="icon-theme">
+                    <svg width="30" height="30" class="icon-theme" data-switch="light-theme">
                         <use href="./images/icons.svg#icon-light-theme"></use>
                     </svg>
                     <div class="theme-switcher__container">
@@ -40,7 +40,7 @@
                             <div class="theme-switcher__circle dark-theme"></div>
                         </div>
                     </div>
-                    <svg width="28" height="28" class="icon-theme chosen">
+                    <svg width="28" height="28" class="icon-theme" data-switch="dark-theme">
                         <use href="./images/icons.svg#icon-dark-theme"></use>
                     </svg>
                 </div>
