add popular anime render

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,10 +20,10 @@
         </div>
         <div class="header__holder">
             <nav class="header__nav">
-                <a class="header__link current">
+                <a class="header__link current" data-link="recent-uploads">
                     Recent uploads
                 </a>
-                <a href="" class="header__link">
+                <a href="" class="header__link" data-link="popular">
                     Popular
                 </a>
             </nav>
