add current link mark

--- a/src/partials/anime.html
+++ b/src/partials/anime.html
@@ -1,6 +1,6 @@
 <main class="anime">
     <div class="container">
-        <ul class="anime-list">
+        <ul class="anime-list" data-contain="">
         </ul>
         <div id="tui-pagination-container" class="tui-pagination"></div>
     </div>
