--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
                     AnimeGoGo
                 </h1>
             </a>
-            <form class="header__search">
+            <form class="header__search" autocomplete="off">
                 <input type="text" id="searchBox" placeholder="Naruto" class="header__search__input">
                 <button type="submit" class="header__search__btn dark-theme">
                     <svg width="30" height="30">
@@ -20,11 +20,11 @@
         </div>
         <div class="header__holder">
             <nav class="header__nav">
-                <a class="header__link current" data-link="recent-uploads">
-                    Recent uploads
-                </a>
-                <a href="" class="header__link" data-link="popular">
+                <a class="header__link" data-link="popular">
                     Popular
+                </a>
+                <a class="header__link" data-link="recent-uploads">
+                    Recent uploads
                 </a>
             </nav>
             <div class="header__interaction">
