--- a/src/partials/anime.html
+++ b/src/partials/anime.html
@@ -2,6 +2,6 @@
     <div class="container">
         <ul class="anime-list" data-contain="">
         </ul>
-        <div id="tui-pagination-container" class="tui-pagination"></div>
+        <div id="anime-pagination tui-pagination-container" class="tui-pagination"></div>
     </div>
 </main>
