--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
                 </h1>
             </a>
             <form class="header__search" autocomplete="off">
-                <input type="text" id="searchBox" placeholder="Naruto" class="header__search__input">
+                <input type="text" id="searchBox" placeholder="Searching perfect waifu..." class="header__search__input">
                 <button type="submit" class="header__search__btn dark-theme">
                     <svg width="30" height="30">
                         <use href="./images/icons.svg#icon-search"></use>
