--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,31 @@
 <footer class="footer">
-    <div class="container">
-        <ul class="footer__nav">
-            <li>Home</li>
-            <li>Popular</li>
-        </ul>
-    </div>
+  <div class="container footer--flex">
+    <h2 class="footer__copyright">
+      Website was developed by
+      <a
+        class="footer__link"
+        href="https://github.com/Slavyasanek"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <svg width="30" height="30" class="footer__icon">
+          <use href="./images/icons.svg#icon-github"></use></svg>
+          <span> Slavyasanek</span>
+      </a>
+    </h2>
+    <svg width="30" height="30" class="footer__icon">
+      <use href="./images/icons.svg#icon-code"></use>
+    </svg>
+    <h3 class="footer__copyright">
+      Thanks to
+      <a
+        href="https://docs.consumet.org/"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="footer__link"
+        >Consument.org</a
+      >
+      for free Rest API
+    </h3>
+  </div>
 </footer>
