--- a/src/partials/headerLibrary.html
+++ b/src/partials/headerLibrary.html
@@ -9,27 +9,22 @@
                     AnimeGoGo
                 </h1>
             </a>
-            <form class="header__search" autocomplete="off">
-                <input type="text" id="searchBox" placeholder="Searching perfect waifu..." class="header__search__input">
-                <button type="submit" class="header__search__btn dark-theme">
-                    <svg width="30" height="30">
-                        <use href="./images/icons.svg#icon-search"></use>
-                    </svg>
-                </button>
-            </form>
         </div>
         <div class="header__holder">
             <nav class="header__nav">
-                <a class="header__link" data-link="popular">
-                    Popular
+                <a class="header__link" data-link="like">
+                    Likes
                 </a>
-                <a class="header__link" data-link="recent-uploads">
-                    Recent uploads
+                <a class="header__link" data-link="queue">
+                    In queue
                 </a>
             </nav>
             <div class="header__interaction">
-                <a class="btn--blue library__btn" type="button"  href="./library.html">
-                    My Library
+                <a class="btn--blue back__btn" type="button" href="./">
+                    <svg width="30" height="30" class="icon-back">
+                        <use href="./images/icons.svg#icon-back"></use>
+                    </svg>
+                    Back
                 </a>
                 <div class="theme-switcher">
                     <svg width="30" height="30" class="icon-theme" data-switch="light-theme">
