--- a/src/sass/components/_anime-list.scss
+++ b/src/sass/components/_anime-list.scss
@@ -113,6 +113,7 @@
     &:focus,
     &:active {
       color: $likeColorDark;
+      animation: heartbeat 1s infinite;
     }
   }
   @include min_768 {
