--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,7 @@
 @import './utils/variables';
 @import './utils/mixins';
 @import './utils/placeholders';
+@import './utils/animation';
 
 @import './base/reset';
 @import './base/container';
