--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,4 +14,6 @@
 @import './components/header';
 @import './components/anime-list';
 @import './layout/modal';
+@import './layout/modal-accept';
+@import './components/library';
 @import './components/footer';
