--- a/src/sass/components/_anime-list.scss
+++ b/src/sass/components/_anime-list.scss
@@ -22,6 +22,7 @@
   width: calc((100% - 4 * 5px) / 2);
   margin: 5px;
   cursor: pointer;
+  @extend %transition;
   @include min_768 {
     width: calc((100% - 6 * 5px) / 3);
   }
