--- a/src/partials/anime.html
+++ b/src/partials/anime.html
@@ -1,6 +1,6 @@
 <main class="anime">
     <div class="container">
-        <ul class="anime-list" data-contain="">
+        <ul class="anime-list js-anime" data-contain="">
         </ul>
         <div id="anime-pagination tui-pagination-container" class="tui-pagination"></div>
     </div>
