add modal for storage

--- a/src/partials/modal-accept.html
+++ b/src/partials/modal-accept.html
@@ -1,4 +1,4 @@
-<div class="accept open">
+<div class="accept">
   <div class="accept__body">
     <button type="button" class="accept__close" accept-popup-close>
       <svg width="30" height="30" class="accept__close-icon">
@@ -10,8 +10,8 @@
         Are you sure you want to delete anime from your library?
       </h2>
       <div class="accept__btns">
-        <button class="btn--red accept__btn">Yes</button>
-        <button class="btn--blue accept__btn">No</button>
+        <button class="btn--red accept__btn" data-delete="">Yes</button>
+        <button class="btn--blue accept__btn" data-reject>No</button>
       </div>
     </div>
   </div>
