add accept and render library cards

--- a/src/partials/headerLibrary.html
+++ b/src/partials/headerLibrary.html
@@ -12,12 +12,12 @@
         </div>
         <div class="header__holder">
             <nav class="header__nav">
-                <a class="header__link" data-link="like">
-                    Likes
-                </a>
-                <a class="header__link" data-link="queue">
-                    In queue
-                </a>
+                <p class="header__link" data-link="like">
+                    Your Likes
+                </p>
+                <p class="header__link" data-link="queue">
+                    and queue
+                </p>
             </nav>
             <div class="header__interaction">
                 <a class="btn--blue back__btn" type="button" href="./">
