--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -66,6 +66,7 @@ body.lock {
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 50px 20px;
+  overflow: auto;
   @include min_768 {
     width: 400px;
   }
