update library header

--- a/src/partials/headerLibrary.html
+++ b/src/partials/headerLibrary.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="container header--flex">
+    <div class="container library--flex">
         <div class="header__holder">
             <a class="header__logo" href="./">
                 <svg width="100" height="100" class="logo">
@@ -10,15 +10,7 @@
                 </h1>
             </a>
         </div>
-        <div class="header__holder">
-            <nav class="header__nav">
-                <p class="header__link" data-link="like">
-                    Your Likes
-                </p>
-                <p class="header__link" data-link="queue">
-                    and queue
-                </p>
-            </nav>
+        <div class="header__holder library-page">
             <div class="header__interaction">
                 <a class="btn--blue back__btn" type="button" href="./">
                     <svg width="30" height="30" class="icon-back">
