--- a/src/sass/components/_library.scss
+++ b/src/sass/components/_library.scss
@@ -1,4 +1,12 @@
 .library {
+    &--flex {
+        @include min_768 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+        }
+    }
     &__btns {
         display: flex;
         justify-content: center;
