add mini loader to first page

--- a/src/partials/anime.html
+++ b/src/partials/anime.html
@@ -2,6 +2,9 @@
     <div class="container">
         <ul class="anime-list js-anime" data-contain="">
         </ul>
-        <div id="anime-pagination tui-pagination-container" class="tui-pagination"></div>
+        <div id="anime-pagination tui-pagination-container" class="tui-pagination" style="display: none;"></div>
+        <div class="mini-loader">
+            <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </div>
     </div>
 </main>
