--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,6 +10,7 @@
 @import './layout/theme_switcher';
 @import './layout/btns';
 @import './layout/pagination';
+@import './layout/mini-loader';
 
 @import './components/header';
 @import './components/anime-list';
