--- a/src/sass/components/_anime-list.scss
+++ b/src/sass/components/_anime-list.scss
@@ -13,13 +13,16 @@
 }
 .anime-list {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: -5px;
+  flex-direction: column;
+  @include min_768 {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: -5px;
+  }
 }
 
 .card {
-  width: calc((100% - 4 * 5px) / 2);
+  // width: calc((100% - 2 * 5px) / 1);
   margin: 5px;
   cursor: pointer;
   @extend %transition;
@@ -42,13 +45,10 @@
   }
   &__thumb {
     width: 100%;
-    height: 200px;
+    height: 350px;
     position: relative;
     overflow: hidden;
     box-shadow: 7px 5px 82px -33px rgba(114, 137, 218, 1);
-    @include min_768 {
-      height: 350px;
-    }
     @include min_1440 {
       height: 400px;
     }
@@ -56,6 +56,7 @@
   &__img {
     display: block;
     object-fit: cover;
+    object-position: top;
     width: 100%;
     height: 100%;
     @extend %transition;
@@ -100,7 +101,8 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 20px;
+  width: 60px;
+  height: 60px;
   background-color: $mainBcgLightTheme;
   display: flex;
   justify-content: center;
@@ -109,6 +111,7 @@
   border-top-left-radius: 10px;
   & > .icon-like {
     color: $likeColorLight;
+    font-size: 36px;
     @extend %transition;
     &:hover,
     &:focus,
@@ -126,6 +129,13 @@
     height: 40px;
     .icon-like {
       font-size: 22px;
+    }
+  }
+  @include min_1024 {
+    width: 60px;
+    height: 60px;
+    .icon-like {
+      font-size: 30px;
     }
   }
 }
