--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -98,20 +98,26 @@ body.lock {
     background-color: transparent;
     border: none;
     padding: 0;
+    cursor: pointer;
     &-icon {
       width: 20px;
       height: 20px;
       @extend %transition;
-      &:hover,
-      &:active,
-      &:focus {
-        fill: $decorativeGreyColor;
-      }
       &.light-theme {
         fill: $textColorLightTheme;
+        &:hover,
+        &:active,
+        &:focus {
+          fill: $decorativeGreyColor;
+        }
       }
       &.dark-theme {
         fill: $textColorDarkTheme;
+        &:hover,
+        &:active,
+        &:focus {
+          fill: $decorativeGreyColor;
+        }
       }
     }
   }
