--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -10,6 +10,8 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 50ms cubic-bezier(0.4, 0, 0.2, 1);
     &.dark-theme {
         background-color: $mainBcgDarkTheme;
         color: $textColorDarkTheme;
