--- a/src/partials/anime.html
+++ b/src/partials/anime.html
@@ -1,10 +1,20 @@
-<main class="anime">
-    <div class="container">
-        <ul class="anime-list js-anime" data-contain="">
-        </ul>
-        <div id="anime-pagination tui-pagination-container" class="tui-pagination" style="display: none;"></div>
-        <div class="mini-loader">
-            <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-        </div>
+<div class="container">
+  <ul class="anime-list js-anime" data-contain=""></ul>
+  <div
+    id="anime-pagination tui-pagination-container"
+    class="tui-pagination"
+    style="display: none"
+  ></div>
+  <div class="mini-loader">
+    <div class="lds-roller">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
-</main>
+  </div>
+</div>
