--- a/src/partials/anime-library.html
+++ b/src/partials/anime-library.html
@@ -7,5 +7,22 @@
       </button>
     </div>
     <ul class="anime-list js-storage" data-contain=""></ul>
+    <div
+    id="anime-pagination tui-pagination-container"
+    class="tui-pagination"
+    style="display: none"
+  ></div>
+  <div class="mini-loader">
+    <div class="lds-roller">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
   </div>
 </main>
