add simple quote slider

--- a/src/partials/quotes.html
+++ b/src/partials/quotes.html
@@ -1,26 +1,68 @@
-<div class="swiper">
-  <!-- Additional required wrapper -->
-  <div class="swiper-wrapper">
-    <!-- Slides -->
-    <div class="swiper-slide">
-      <blockquote>
-        <h3>
-          Very funny. Carrots, peppers, and bugs! Everyone has something they
-          don't like and I don't like bugs!
-        </h3>
-        <cite>Character: Kasumi</cite>
-        <cite> Anime: Pokemon</cite>
-      </blockquote>
+<div class="slider">
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      <!-- <div class="swiper-slide">
+        <blockquote class="swiper__quote">
+          <h3 class="swiper__speech">
+            Very funny. Carrots, peppers, and bugs! Everyone has something they
+            don't like and I don't like bugs!
+          </h3>
+          <cite class="swiper__cite"> <span class="swiper__feature">Character:</span> Kasumi</cite>
+          <cite class="swiper__cite"> <span class="swiper__feature">Anime:</span> Pokemon</cite>
+        </blockquote>
+      </div>
+      <div class="swiper-slide">
+          <blockquote class="swiper__quote">
+            <h3 class="swiper__speech">
+              Very funny. Carrots, peppers, and bugs! Everyone has something they
+              don't like and I don't like bugs!
+            </h3>
+            <cite class="swiper__cite"> <span class="swiper__feature">Character:</span> Kasumi</cite>
+            <cite class="swiper__cite"> <span class="swiper__feature">Anime:</span> Pokemon</cite>
+          </blockquote>
+      </div>
+      <div class="swiper-slide">
+          <blockquote class="swiper__quote">
+            <h3 class="swiper__speech">
+              Very funny. Carrots, peppers, and bugs! Everyone has something they
+              don't like and I don't like bugs!
+            </h3>
+            <cite class="swiper__cite"> <span class="swiper__feature">Character:</span> Kasumi</cite>
+            <cite class="swiper__cite"> <span class="swiper__feature">Anime:</span> Pokemon</cite>
+          </blockquote>
+      </div>
+      <div class="swiper-slide">
+          <blockquote class="swiper__quote">
+            <h3 class="swiper__speech">
+              Very funny. Carrots, peppers, and bugs! Everyone has something they
+              don't like and I don't like bugs!
+            </h3>
+            <cite class="swiper__cite"> <span class="swiper__feature">Character:</span> Kasumi</cite>
+            <cite class="swiper__cite"> <span class="swiper__feature">Anime:</span> Pokemon</cite>
+          </blockquote>
+      </div>
+      <div class="swiper-slide">
+          <blockquote class="swiper__quote">
+            <h3 class="swiper__speech">
+              Very funny. Carrots, peppers, and bugs! Everyone has something they
+              don't like and I don't like bugs!
+            </h3>
+            <cite class="swiper__cite"> <span class="swiper__feature">Character:</span> Kasumi</cite>
+            <cite class="swiper__cite"> <span class="swiper__feature">Anime:</span> Pokemon</cite>
+          </blockquote>
+      </div>
+      <div class="swiper-slide">
+          <blockquote class="swiper__quote">
+            <h3 class="swiper__speech">
+              Very funny. Carrots, peppers, and bugs! Everyone has something they
+              don't like and I don't like bugs!
+            </h3>
+            <cite class="swiper__cite"> <span class="swiper__feature">Character:</span> Kasumi</cite>
+            <cite class="swiper__cite"> <span class="swiper__feature">Anime:</span> Pokemon</cite>
+          </blockquote>
+      </div> -->
     </div>
-    <div class="swiper-slide">Slide 2</div>
-    <div class="swiper-slide">Slide 3</div>
-    ...
+    <!-- <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div> -->
   </div>
-
-  <!-- If we need navigation buttons -->
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
-
-  <!-- If we need scrollbar -->
-  <div class="swiper-scrollbar"></div>
 </div>
