--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,7 @@
 @import './layout/btns';
 @import './layout/pagination';
 @import './layout/mini-loader';
+@import './layout/slider';
 
 @import './components/header';
 @import './components/anime-list';
