--- a/src/sass/layout/_slider.scss
+++ b/src/sass/layout/_slider.scss
@@ -11,13 +11,18 @@
     display: flex;
     justify-content: center;
     &-slide {
-      background-color: $oddColorDarkTheme;
       border-radius: 10px;
       padding: 30px 20px 10px;
       box-shadow: inset 7px 5px 50px -33px rgba(114, 137, 218, 1);
       opacity: 0.2;
       transform: scale(0.7);
       @extend %transition;
+      &.light-theme {
+        background-color: $oddColorLightTheme;
+      }
+      &.dark-theme {
+        background-color: $oddColorDarkTheme;
+      }
       &.swiper-slide-active {
         opacity: 1;
         transform: scale(1);
